# ROHE

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  dev note.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
examples/applications/bts/: Dockerfile  README.md  contract.yaml  docker-compose.sim.yml  docker-compose.yml  pyproject.toml
examples/applications/bts/client/: client.py  simulate.py
examples/applications/bts/client/workload_profiles/: burst.yaml
examples/applications/bts/k8s/: aggregator.yaml  data-hub.yaml  data-ingestion.yaml  gateway.yaml  gru.yaml  kustomization.yaml  lstm.yaml  namespace.yaml  orchestrator.yaml  redis.yaml  statistical.yaml  transformer.yaml
examples/applications/bts/scripts/: deploy.sh  teardown.sh
examples/applications/bts/services/: Dockerfile.inference
examples/applications/bts/services/aggregator/: main.py
examples/applications/bts/services/data_hub/: main.py
examples/applications/bts/services/data_ingestion/: main.py
examples/applications/bts/services/gateway/: main.py
examples/applications/bts/services/gru_inference/: main.py
examples/applications/bts/services/lstm_inference/: main.py
examples/applications/bts/services/statistical_inference/: main.py
examples/applications/bts/services/transformer_inference/: main.py
examples/applications/object_classification/: Dockerfile  README.md  contract.yaml  docker-compose.sim.yml  docker-compose.yml  pyproject.toml  requirement.txt
examples/applications/object_classification/client/: client.py
examples/applications/object_classification/client/workload_profiles/: steady_medium.yaml
examples/applications/object_classification/k8s/: aggregator.yaml  data-hub.yaml  efficientnet.yaml  gateway.yaml  kustomization.yaml  mobilenet.yaml  namespace.yaml  orchestrator.yaml  preprocessor.yaml  resnet50.yaml  vit.yaml
examples/applications/object_classification/kube_deployment/: start_docker_container.sh  start_listen_service.sh  start_processing_service.sh
examples/applications/object_classification/kube_deployment/aggregatingService/: Dockerfile  aggregating_function.py  aggregating_functions.py  aggregating_service.yaml  build_docker.sh  docker-compose.yaml  new_agg_config.yaml  requirements.txt  server.py  test_object.py
examples/applications/object_classification/kube_deployment/dataIngestionService/: Dockerfile  README.md  app.py  build_docker.sh  docker-compose.yml  ingestion_service.yaml  local_config.yaml  new_ingest_config.yaml  readme.md  requirements.txt  server.py
examples/applications/object_classification/kube_deployment/dataProcessingService/: Dockerfile  README.md  build_docker.sh  docker-compose.yml  new_processing_config.yaml  processing_service.py  processing_service.yaml  readme.md  requirements.txt  server.py
examples/applications/object_classification/kube_deployment/imageInfoService/: README.md  docker-compose.yml  image_info_service.yaml
examples/applications/object_classification/kube_deployment/inferenceService/: Dockerfile  README.md  build_docker.sh  docker-compose.yml  inference_service.yaml  new_inf_config.yaml  requirements.txt  server.py  server_v2.py
examples/applications/object_classification/kube_deployment/iotDevice/: iot_device.json
examples/applications/object_classification/kube_deployment/mqtt_broker/: docker-compose.yml  test_mqtt_pub.py  test_mqtt_sub_1.py
examples/applications/object_classification/kube_deployment/redis/: docker-compose.yml  test_redis.py
examples/applications/object_classification/scripts/: deploy.sh  teardown.sh
examples/applications/object_classification/services/: Dockerfile.inference
examples/applications/object_classification/services/aggregator/: main.py
examples/applications/object_classification/services/data_hub/: main.py
examples/applications/object_classification/services/efficientnet_inference/: main.py
examples/applications/object_classification/services/gateway/: main.py
examples/applications/object_classification/services/mobilenet_inference/: main.py
examples/applications/object_classification/services/orchestrator/: main.py
examples/applications/object_classification/services/preprocessor/: main.py
examples/applications/object_classification/services/resnet50_inference/: main.py
examples/applications/object_classification/services/vit_inference/: main.py
examples/applications/smart_building/: Dockerfile  README.md  contract.yaml  docker-compose.sim.yml  docker-compose.yml  pyproject.toml
examples/applications/smart_building/client/: client.py
examples/applications/smart_building/client/workload_profiles/: burst.yaml  multimodal.yaml  steady_medium.yaml
examples/applications/smart_building/config/: consumer.yaml  data_hub.yaml  orchestration.yaml
examples/applications/smart_building/consumer/: consumer.py  query.yaml
examples/applications/smart_building/control_plane/: control_plane.py  sla.yaml
examples/applications/smart_building/database/: start_db.py
examples/applications/smart_building/k8s/: aggregator.yaml  cnn1d.yaml  control-plane.yaml  data-hub.yaml  data-streamer.yaml  kustomization.yaml  lstm-ts.yaml  minirocket-ridge.yaml  minirocket-svm.yaml  namespace.yaml  orchestrator.yaml  preprocessor.yaml  slowfast.yaml  x3d-m.yaml  x3d-s.yaml  x3d-xs.yaml
examples/applications/smart_building/scripts/: deploy.sh  teardown.sh
examples/applications/smart_building/services/: Dockerfile.inference
examples/applications/smart_building/stream_handler/: stream_handle.py
examples/applications/smart_building/stream_services/: data_hub.py  readme.md  stream_client.py  stream_config.yaml
examples/applications/smart_building/time_series_inference/: Dockerfile  build_docker.sh  config.yaml  pyproject.toml  readme.md  run_docker.sh  time_series_inference.py
examples/applications/smart_building/training/: minirocket_training.py  x3d_config.yaml  x3d_training.py
examples/applications/smart_building/video_stream_inference/: Dockerfile  build_docker.sh  config.yaml  pyproject.toml  readme.md  run_docker.sh  video_inference.py
(+1624 files in other folders)
